[gd_scene load_steps=10 format=3 uid="uid://tgqywgyvn1jk"]

[ext_resource type="Texture2D" uid="uid://dw13hdnq3kryo" path="res://assets/environments/decorations/Table.png" id="1_01bv8"]
[ext_resource type="Script" path="res://svc/environments/decorations/table.gd" id="1_tpxu0"]
[ext_resource type="Texture2D" uid="uid://c6hwymayb6ycx" path="res://assets/environments/decorations/chair/chair_base.png" id="2_bijrd"]
[ext_resource type="PackedScene" uid="uid://ngmii8oo8iev" path="res://svc/customers/customer.tscn" id="2_iiv35"]
[ext_resource type="Texture2D" uid="uid://7jdhlfh3qrjd" path="res://assets/environments/decorations/chair/chair_back.png" id="3_blxig"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_10xgw"]
radius = 8.0
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r18mp"]
radius = 4.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mc30b"]
radius = 8.0
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ds0a4"]
radius = 2.0

[node name="Table" type="Area2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_tpxu0")
customerScene = ExtResource("2_iiv35")

[node name="Table" type="Sprite2D" parent="."]
z_index = 4
texture = ExtResource("1_01bv8")

[node name="TableTop" type="CollisionShape2D" parent="."]
position = Vector2(0, -17)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_10xgw")

[node name="Chair_Left" type="Node2D" parent="."]

[node name="ChairBase_left" type="Sprite2D" parent="Chair_Left"]
z_index = 4
position = Vector2(-30, 5)
texture = ExtResource("2_bijrd")
hframes = 2

[node name="ChairBack_Left" type="Sprite2D" parent="Chair_Left"]
z_index = 6
position = Vector2(-30, 5)
texture = ExtResource("3_blxig")
hframes = 2

[node name="Left_spawn" type="Marker2D" parent="Chair_Left"]
position = Vector2(-29, 9)

[node name="LeftChair_body" type="StaticBody2D" parent="Chair_Left"]
position = Vector2(-30, 5)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Chair_Left/LeftChair_body"]
position = Vector2(0, 6)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_r18mp")

[node name="Chair_Right" type="Node2D" parent="."]

[node name="ChairBase_Right" type="Sprite2D" parent="Chair_Right"]
z_index = 4
position = Vector2(30, 5)
texture = ExtResource("2_bijrd")
hframes = 2
frame = 1

[node name="ChairBack_Right" type="Sprite2D" parent="Chair_Right"]
z_index = 6
position = Vector2(30, 5)
texture = ExtResource("3_blxig")
hframes = 2
frame = 1

[node name="Right_spawn" type="Marker2D" parent="Chair_Right"]
position = Vector2(31, 9)

[node name="LeftChair_body" type="StaticBody2D" parent="Chair_Right"]
position = Vector2(30, 5)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Chair_Right/LeftChair_body"]
position = Vector2(0, 6)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_r18mp")

[node name="DishSpot" type="Marker2D" parent="."]
position = Vector2(0, -17)

[node name="Physics Collisions" type="StaticBody2D" parent="."]
z_index = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="Physics Collisions"]
z_index = 200
position = Vector2(0, -17)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_mc30b")

[node name="TableBase" type="CollisionShape2D" parent="Physics Collisions"]
shape = SubResource("CapsuleShape2D_ds0a4")
